# gitlab-api

./: .bumpversion.cfg  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  a2a.json  build-requirements.txt  compose.yml  connector_manifest.yml  debug.Dockerfile  entrypoint.sh  index.html  main_agent.json  mcp.compose.yml  mcp_config.json  mkdocs.yml  mypy_out.txt  opencode.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml  test-requirements.txt  test_setup.py  test_template.py
.github/workflows/: pages.yml  pipeline.yml
.security/: authenticated_negative.py  repository_fuzz.py  security-contract.json
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  platform.md  usage.md
gitlab_api/: __init__.py  __main__.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  auth.py  decorators.py  gitlab_a2a.py  gitlab_agent.py  gitlab_agent.py.bak  gitlab_api.py  gitlab_api_mcp.py  gitlab_db_models.py  gitlab_gql.py  gitlab_input_models.py  gitlab_mcp.py  gitlab_models.py  gitlab_response_models.py  graph_config.py  instances.py  kg_ingest.py  mcp.py  mcp_config.json  mcp_server.py  middlewares.py  tools.py  utils.py  version.py
gitlab_api/agent/: CRON_LOG.md  HEARTBEAT.md  IDENTITY.md
gitlab_api/agent/skills/test-skill/: SKILL.md
gitlab_api/agent_data/: CRON_LOG.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  mcp_config.json  templates.py
gitlab_api/api/: __init__.py  api_client_base.py  api_client_environments.py  api_client_issues.py  api_client_merge_requests.py  api_client_other.py  api_client_pipelines.py  api_client_projects.py  api_client_repositories.py  api_client_system.py  api_client_users_groups.py  api_client_vulnerabilities.py
gitlab_api/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
gitlab_api/mcp/: __init__.py  mcp_branches.py  mcp_commits.py  mcp_custom_api.py  mcp_deploy_tokens.py  mcp_environments.py  mcp_epics.py  mcp_graphql.py  mcp_graphql_ops.py  mcp_groups.py  mcp_issues.py  mcp_jobs.py  mcp_labels.py  mcp_members.py  mcp_merge_requests.py  mcp_merge_rules.py  mcp_milestones.py  mcp_misc.py  mcp_namespaces.py  mcp_notes.py  mcp_packages.py  mcp_pipeline_schedules.py  mcp_pipelines.py  mcp_projects.py  mcp_protected_branches.py  mcp_releases.py  mcp_runners.py  mcp_snippets.py  mcp_tags.py  mcp_users.py  mcp_vulnerabilities.py  mcp_wiki.py
gitlab_api/ontology/: __init__.py  certification.json  gitlab.ttl
gitlab_api/ontology/fixtures/: records.json
gitlab_api/ontology/mappings/: source.yaml
gitlab_api/ontology/migrations/: manifest.json
gitlab_api/ontology/shapes/: connector.shacl.ttl
gitlab_api/prompts/: devops_specialist.json  main_agent.json
gitlab_api/skills/: .gitignore
gitlab_api/skills/gitlab-api-docs/: SKILL.md
gitlab_api/skills/gitlab-api-docs/reference/: admin_token.md  (+400 more)
gitlab_api/skills/gitlab-api-operations/: SKILL.md
gitlab_api/skills/gitlab-branches/: SKILL.md
gitlab_api/skills/gitlab-commits/: SKILL.md
gitlab_api/skills/gitlab-custom-api/: SKILL.md
gitlab_api/skills/gitlab-deploy-tokens/: SKILL.md
gitlab_api/skills/gitlab-environments/: SKILL.md
gitlab_api/skills/gitlab-groups/: SKILL.md
gitlab_api/skills/gitlab-issues/: SKILL.md  WORKFLOW.md
gitlab_api/skills/gitlab-jobs/: SKILL.md
gitlab_api/skills/gitlab-members/: SKILL.md
gitlab_api/skills/gitlab-merge-request-create/: SKILL.md  WORKFLOW.md
gitlab_api/skills/gitlab-merge-request-review/: SKILL.md  WORKFLOW.md
gitlab_api/skills/gitlab-merge-requests/: SKILL.md
gitlab_api/skills/gitlab-merge-rules/: SKILL.md
gitlab_api/skills/gitlab-packages/: SKILL.md
gitlab_api/skills/gitlab-pipeline-schedules/: SKILL.md
gitlab_api/skills/gitlab-pipelines/: SKILL.md  WORKFLOW.md
gitlab_api/skills/gitlab-projects/: SKILL.md
gitlab_api/skills/gitlab-protected-branches/: SKILL.md
gitlab_api/skills/gitlab-releases/: SKILL.md
gitlab_api/skills/gitlab-runners/: SKILL.md
gitlab_api/skills/gitlab-starter/: SKILL.md
gitlab_api/skills/gitlab-tags/: SKILL.md
gitlab_api/skills/gitlab-vulnerabilities/: SKILL.md  WORKFLOW.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
platform/: index.html
scratch/: fix_tests.py  fix_tests_v2.py  fix_tests_v3.py  fix_tests_v4.py
scripts/: security_contract.py  security_sanitizer.py  validate_a2a_agent.py  validate_agent.py  verify_api_integration.py
search/: search_index.json
test/: conftest.py  test_gitlab_a2a_validation.py  test_gitlab_api.py  test_gitlab_db_models.py  test_gitlab_mcp_validation.py  test_gitlab_models.py  test_sqlalchemy.py  test_utils.py  test_verify_a2a.py  verify_a2a_queries.py
tests/: conftest.py  test_action_discovery.py  test_api_wrapper.py  test_auth.py  test_concept_parity.py  test_gitlab_a2a_validation.py  test_gitlab_api_brute_force_coverage.py  test_gitlab_gql.py  test_gitlab_mcp_validation.py  test_gitlab_models.py  test_identity_context_scoping.py  test_init_dynamics.py  test_instances.py  test_kg_ingest.py  test_mock_coverage.py  test_startup.py  test_tool_modes.py  test_utils.py  test_verify_agent.py  verify_a2a_queries.py
usage/: index.html
(+2 files in other folders)
